--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
       max-width: 820px;
       color: #fff;
       text-shadow: 0 2px 14px rgba(0,0,0,.25);
-      pointer-events: auto;            /* re-enable for buttons */
+      pointer-events: auto;
+      margin-top: 28px; /* /* re-enable for buttons */
     }
     .hero__copy h1{
       font-size: clamp(2rem, 4.6vw, 4rem);
@@ -277,13 +278,6 @@
 
     /* Improve stability across DPIs: prevent parent transforms */
     #header, #header *{ transform: none !important; }
-    /* Small breathing room between header/logo and hero video */
-:root { --hero-gap: 10px; }
-@media (min-width: 980px){ :root { --hero-gap: 14px; } }
-
-.hero-fullbleed{
-  margin-top: var(--hero-gap) !important;  /* shows the page bg (#F8F6F3) as a thin strip */
-}
 
   </style>
 </head>
@@ -492,4 +486,5 @@
   </script>
 </body>
 </html>
+
 
