--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       /* Pinned hero copy offsets */
       --hero-x: 28px;
-      --hero-y: 56px;
+      --hero-y: 28px;  /* ↓ lowered text further from logo (was 56px) */
 
       /* Header pin positions */
       --logo-top: 16px;
@@ -65,10 +65,10 @@
       --burger-right: 22px;
     }
     @media (min-width: 768px){
-      :root{ --hero-x: 42px; --hero-y: 68px; }
+      :root{ --hero-x: 42px; --hero-y: 40px; } /* was 68px */
     }
     @media (min-width: 1280px){
-      :root{ --hero-x: 64px; --hero-y: 88px; }
+      :root{ --hero-x: 64px; --hero-y: 52px; } /* was 88px */
     }
 
     /* Base */
@@ -84,13 +84,13 @@
 
     /* Header pinned (logo/menu stay fixed at one spot) */
     #header {
-      position: fixed;                  /* fixed instead of absolute */
+      position: fixed;
       top: 0; left: 0; right: 0;
       background: transparent;
       border: 0; box-shadow: none;
       margin: 0 !important;
       z-index: 60;
-      pointer-events: none;            /* let hero receive clicks; re-enable on children */
+      pointer-events: none;
     }
     #header .inner { padding-top: .45rem; padding-bottom: .15rem; pointer-events: auto; }
 
@@ -126,7 +126,6 @@
     .hero-fullbleed{
       position: relative;
 
-      /* true full-bleed horizontally */
       width: 100dvw;
       margin-left: calc(50% - 50dvw);
       margin-right: calc(50% - 50dvw);
@@ -136,12 +135,11 @@
       border-radius: 0;
       background: #000;
 
-      /* ~40% of viewport */
       height: clamp(280px, 40vh, 520px);
     }
     @media (min-width: 980px){
       .hero-fullbleed{
-        height: 40dvh;                  /* locks to ~40% of visible viewport at any zoom */
+        height: 40dvh;
         min-height: 360px;
         max-height: 560px;
       }
@@ -151,8 +149,8 @@
     .hero-fullbleed .hero-poster{
       position: absolute; inset: 0;
       width: 100%; height: 100%;
-      object-fit: cover;                /* fills without squish */
-      object-position: center;          /* prevents top-crop bias */
+      object-fit: cover;
+      object-position: center;
       display: block;
       will-change: transform;
     }
@@ -161,7 +159,7 @@
     .hero__content{
       position: absolute; inset: 0; z-index: 2;
       display: block; padding: 0;
-      pointer-events: none;            /* avoids overlay eating clicks */
+      pointer-events: none;
     }
     .hero__copy{
       position: absolute;
@@ -170,8 +168,7 @@
       max-width: 820px;
       color: #fff;
       text-shadow: 0 2px 14px rgba(0,0,0,.25);
-      pointer-events: auto;
-      margin-top: 28px; /* /* re-enable for buttons */
+      pointer-events: auto; /* re-enable for buttons */
     }
     .hero__copy h1{
       font-size: clamp(2rem, 4.6vw, 4rem);
@@ -201,7 +198,6 @@
     .trust__item svg { width:18px; height:18px; stroke: var(--lux-accent); }
 
     /* ---------- PRODUCTS: 3 equal tiles in one row ---------- */
-    /* Section background now matches page (no beige band) */
     #products.section-products { background: transparent; padding: clamp(18px, 3vw, 24px) 0 0; }
 
     .product-row{
@@ -212,7 +208,6 @@
       gap: clamp(12px, 2.6vw, 28px);
       align-items: end;
     }
-    /* Tile */
     .product{
       position: relative;
       background: var(--lux-card);
@@ -223,23 +218,21 @@
     }
     .product:hover{ transform: translateY(-6px); box-shadow: var(--lux-shadow-lg); filter: brightness(1.03) contrast(1.02); }
 
-    /* Equal size media window (keeps images equal even if their crops differ) */
     .product .media{
       width: 100%;
-      aspect-ratio: 3/4;          /* consistent shape across all three */
+      aspect-ratio: 3/4;
       overflow: hidden;
       background: #f4f2ee;
     }
     .product img{
       width: 100%; height: 100%;
-      object-fit: cover;          /* fills the window equally */
+      object-fit: cover;
       display:block;
       transition: transform 700ms cubic-bezier(.2,.6,.2,1);
       filter: brightness(.98) contrast(1.05);
     }
     .product:hover img{ transform: scale(1.03); }
 
-    /* Caption inside tile, bottom-left */
     .product figcaption{
       position: absolute; left: 12px; bottom: 12px; z-index: 2;
       font-family: "Fraunces", Georgia, serif; font-weight: 600; letter-spacing: .14em;
@@ -250,13 +243,11 @@
       backdrop-filter: blur(3px);
     }
 
-    /* Mobile: stack */
     @media (max-width: 980px){
       .product-row{ grid-template-columns: 1fr; }
       .product .media{ aspect-ratio: 3/4; }
     }
 
-    /* Section intro */
     #main .inner > header .lede { color: var(--lux-muted); margin: .75rem 0 0; }
 
     /* Footer */
@@ -278,7 +269,6 @@
 
     /* Improve stability across DPIs: prevent parent transforms */
     #header, #header *{ transform: none !important; }
-
   </style>
 </head>
 <body class="is-preload">
@@ -486,5 +476,3 @@
   </script>
 </body>
 </html>
-
-
