--- a/bathrobe.html
+++ b/bathrobe.html
@@ -390,6 +390,63 @@
       #footer{ background:var(--ui-100); }
       #footer .inner{ padding-top:2rem; padding-bottom:2rem; }
       #footer h2{ font-size:1rem; letter-spacing:.16em; color:var(--ink-700); }
+
+      /* -------- Modal (image popup) -------- */
+      .modal{
+        position:fixed;
+        inset:0;
+        display:none;
+        z-index:1000;
+      }
+      .modal[aria-hidden="false"]{ display:block; }
+      .modal__backdrop{
+        position:absolute;
+        inset:0;
+        background:rgba(0,0,0,.55);
+        backdrop-filter:saturate(140%) blur(2px);
+      }
+      .modal__dialog{
+        position:absolute;
+        inset:auto 0 0 0;
+        margin:auto;
+        top:50%;
+        transform:translateY(-50%);
+        width:min(96vw, 980px);
+        background:#fff;
+        border-radius:18px;
+        box-shadow:var(--shadow-2);
+        overflow:hidden;
+      }
+      .modal__header{
+        display:flex;
+        justify-content:flex-end;
+        padding:8px;
+        background:#fff;
+        border-bottom:1px solid var(--ui-300);
+      }
+      .modal__close{
+        border:1px solid var(--ui-400);
+        background:#fff;
+        border-radius:10px;
+        width:38px;
+        height:38px;
+        font-weight:700;
+        cursor:pointer;
+      }
+      .modal__body{
+        background:#000;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+      }
+      .modal__img{
+        width:100%;
+        height:auto;
+        display:block;
+      }
+      @media (max-width:720px){
+        .modal__dialog{ width:96vw; }
+      }
     </style>
   </head>
 
@@ -502,6 +559,13 @@
 
                 <h3>Why It Matters</h3>
                 <p>More than loungewear, Kenno is a small sanctuary. The cotton-rich, recycled construction invites daily use; the clean lines and tailored details echo the quiet polish of fine spa robes. From sauna to slow evenings, it delivers an enduring sense of “luxury that lasts.”</p>
+
+                <!-- NEW: Button that opens image popup -->
+                <p style="margin-top:.6rem;">
+                  <button type="button" class="button" id="openWhyModal" aria-haspopup="dialog" aria-controls="whyModal">
+                    View product photo
+                  </button>
+                </p>
               </article>
             </aside>
           </section>
@@ -534,6 +598,22 @@
           </ul>
         </div>
       </footer>
+    </div>
+
+    <!-- Modal markup -->
+    <div class="modal" id="whyModal" role="dialog" aria-modal="true" aria-hidden="true" aria-labelledby="whyModalTitle">
+      <div class="modal__backdrop" data-close-modal></div>
+      <div class="modal__dialog">
+        <div class="modal__header">
+          <button class="modal__close" type="button" id="closeWhyModal" aria-label="Close">×</button>
+        </div>
+        <div class="modal__body">
+          <img
+            class="modal__img"
+            alt="Kenno bathrobe product photo"
+            src="https://res.cloudinary.com/df4of6htg/image/upload/v1761858382/Screenshot_2025-10-30_221901_msdehr.png" />
+        </div>
+      </div>
     </div>
 
     <!-- Scripts -->
@@ -863,6 +943,34 @@
           onScroll();
         });
         ro.observe(details);
+      })();
+
+      /* --- Modal wiring --- */
+      (function(){
+        var modal = document.getElementById('whyModal');
+        var openBtn = document.getElementById('openWhyModal');
+        var closeBtn = document.getElementById('closeWhyModal');
+        var backdrop = modal.querySelector('[data-close-modal]');
+
+        function openModal(){
+          modal.setAttribute('aria-hidden','false');
+          document.body.style.overflow = 'hidden';
+          closeBtn.focus();
+        }
+        function closeModal(){
+          modal.setAttribute('aria-hidden','true');
+          document.body.style.overflow = '';
+          openBtn.focus();
+        }
+
+        openBtn.addEventListener('click', openModal);
+        closeBtn.addEventListener('click', closeModal);
+        backdrop.addEventListener('click', closeModal);
+        document.addEventListener('keydown', function(e){
+          if(e.key === 'Escape' && modal.getAttribute('aria-hidden') === 'false'){
+            closeModal();
+          }
+        });
       })();
     </script>
   </body>
