--- a/bathrobe.html
+++ b/bathrobe.html
@@ -391,66 +391,53 @@
       #footer .inner{ padding-top:2rem; padding-bottom:2rem; }
       #footer h2{ font-size:1rem; letter-spacing:.16em; color:var(--ink-700); }
 
-      /* -------- Modal (image popup) -------- */
-      .modal{
-        position:fixed;
-        inset:0;
-        display:none;
-        z-index:1000;
-      }
-      .modal[aria-hidden="false"]{ display:block; }
-      .modal__backdrop{
-        position:absolute;
-        inset:0;
-        background:rgba(0,0,0,.55);
-        backdrop-filter:saturate(140%) blur(2px);
-      }
-      .modal__dialog{
-        position:absolute;
-        inset:auto 0 0 0;
-        margin:auto;
-        top:50%;
-        transform:translateY(-50%);
-        width:min(96vw, 980px);
-        background:#fff;
-        border-radius:18px;
-        box-shadow:var(--shadow-2);
-        overflow:hidden;
-      }
-      .modal__header{
-        display:flex;
-        justify-content:flex-end;
-        padding:8px;
-        background:#fff;
-        border-bottom:1px solid var(--ui-300);
-      }
-      .modal__close{
-        border:1px solid var(--ui-400);
-        background:#fff;
-        border-radius:10px;
-        width:38px;
-        height:38px;
-        font-weight:700;
-        cursor:pointer;
-      }
-      .modal__body{
-        background:#fff;               /* was #000 */
-        padding:0;
-        display:flex;
-        align-items:center;
-        justify-content:center;
-        max-height:80vh;
-      }
-      .modal__img{
-        display:block;
-        width:100%;
-        height:auto;
-        max-height:80vh;               /* keep inside viewport */
-        object-fit:contain;            /* prevent cropping */
-      }
-      @media (max-width:720px){
-        .modal__dialog{ width:96vw; }
-      }
+/* -------- Modal (image popup) -------- */
+.modal{
+  position:fixed; inset:0; display:none; z-index:1000;
+}
+.modal[aria-hidden="false"]{ display:block; }
+.modal__backdrop{
+  position:absolute; inset:0;
+  background:rgba(0,0,0,.55);
+  backdrop-filter:saturate(140%) blur(2px);
+}
+.modal__dialog{
+  position:absolute; left:0; right:0; top:50%;
+  transform:translateY(-50%);
+  width:min(96vw, 980px);
+  max-height:92svh;                 /* visual viewport-aware */
+  background:#fff; border-radius:18px;
+  box-shadow:0 10px 30px rgba(0,0,0,.10);
+  overflow:hidden;
+  display:flex; flex-direction:column;   /* NEW */
+}
+.modal__header{
+  flex:0 0 auto;
+  display:flex; justify-content:flex-end; align-items:center;
+  gap:8px; padding:8px;
+  background:#fff; border-bottom:1px solid var(--ui-300);
+}
+.modal__close{
+  border:1px solid var(--ui-400); background:#fff;
+  border-radius:10px; width:38px; height:38px; font-weight:700; cursor:pointer;
+}
+.modal__body{
+  flex:1 1 auto;
+  background:#fff;                  /* was #000 */
+  padding:0; display:flex; align-items:center; justify-content:center;
+  max-height:calc(92svh - 48px);    /* subtract header height */
+  overflow:auto;                    /* allow scroll if needed */
+}
+.modal__img{
+  display:block;
+  max-width:100%;
+  max-height:100%;
+  width:auto; height:auto;
+  object-fit:contain;
+}
+@media (max-width:720px){
+  .modal__dialog{ width:96vw; }
+}
     </style>
   </head>
 
