--- a/bathrobe.html
+++ b/bathrobe.html
@@ -435,6 +435,22 @@
   width:auto; height:auto;
   object-fit:contain;
 }
+      /* --- Override Add to Cart button color to Jet Black --- */
+.button.primary,
+.actions-top .button.primary {
+  background-color: #000 !important;
+  color: #fff !important;
+  border: none !important;
+  box-shadow: 0 6px 16px rgba(0,0,0,.25) !important;
+}
+
+.button.primary:hover,
+.actions-top .button.primary:hover {
+  background-color: #111 !important;
+  color: #fff !important;
+  box-shadow: 0 8px 18px rgba(0,0,0,.35) !important;
+}
+
 @media (max-width:720px){
   .modal__dialog{ width:96vw; }
 }
