--- a/bathrobe.html
+++ b/bathrobe.html
@@ -450,23 +450,16 @@
   color: #fff !important;
   box-shadow: 0 8px 18px rgba(0,0,0,.35) !important;
 }
-/* --- Jet Black buttons (View Size Chart + Back to Products) --- */
-.button,
-.button:visited {
+/* --- Keep original button style, but make hover jet black --- */
+.button:hover,
+.button.primary:hover,
+.actions .button:hover {
   background-color: #000 !important;
+  border-color: #000 !important;
   color: #fff !important;
-  border: 1px solid #000 !important;
-  transition: all 0.25s ease;
-  letter-spacing: 0.1em;
-  font-weight: 700;
+  box-shadow: 0 6px 14px rgba(0,0,0,.25) !important;
 }
 
-/* Hover returns to the original pink */
-.button:hover {
-  background-color: #ff4f81 !important;   /* your brand pink */
-  border-color: #ff4f81 !important;
-  color: #fff !important;
-}
 
 @media (max-width:720px){
   .modal__dialog{ width:96vw; }
