--- a/travel-hanging-bag.html
+++ b/travel-hanging-bag.html
@@ -80,9 +80,6 @@
     .actions .button:hover{ transform:translateY(-2px); box-shadow:0 8px 22px rgba(0,0,0,.10); }
 
     .buy-row{ display:flex; align-items:center; gap:12px; margin:1rem 0 .75rem; }
-    .qty{ display:flex; align-items:center; border:1px solid #e6e6e6; border-radius:10px; overflow:hidden; }
-    .qty button{ width:36px; height:36px; border:0; background:#fafafa; cursor:pointer; font-size:1.1rem; }
-    .qty input{ width:50px; height:36px; border:0; text-align:center; font-size:1rem; }
 
     .note{ font-size:.9rem; color:#666; }
 
@@ -96,7 +93,7 @@
     #header, #header *{ transform:none!important; }
     img{ aspect-ratio:auto; }
 
-    /* ===== Remove template pink hover (keep normal pink; hover turns jet-black) ===== */
+    /* ===== Buttons: hover turns jet-black (keep default theme otherwise) ===== */
     #addToCart.button:hover,
     #addToCart.button:focus-visible{
       background:#111 !important;
@@ -111,57 +108,50 @@
       color:#fff !important;
       box-shadow:0 10px 24px rgba(0,0,0,.18) !important;
     }
-    /* Fix quantity stepper layout (all product pages) */
-.qty{
-  display:inline-grid;
-  grid-template-columns:40px 56px 40px; /* btn | input | btn */
-  height:40px;
-  border:1px solid #e6e6e6;
-  border-radius:10px;
-  overflow:hidden;
-  background:#fff;
-  box-sizing:border-box;
-}
 
-/* Reset native button look and join visually */
-.qty button{
-  all:unset;                 /* remove UA styles */
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
-  background:#fafafa;
-  font-size:18px;
-  font-weight:700;
-  line-height:1;
-}
-.qty button:first-child{ border-right:1px solid #e6e6e6; }
-.qty button:last-child{  border-left:1px solid #e6e6e6;  }
+    /* ===== Quantity stepper (joined 3-cell control) ===== */
+    .qty{
+      display:inline-grid;
+      grid-template-columns:44px 64px 44px; /* btn | input | btn */
+      height:44px;
+      border:1px solid #e6e6e6;
+      border-radius:10px;
+      overflow:hidden;
+      background:#fff;
+      box-sizing:border-box;
+    }
+    .qty button{
+      all:unset;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      cursor:pointer;
+      background:#fafafa;
+      font-size:20px;
+      font-weight:700;
+      line-height:1;
+      user-select:none;
+    }
+    .qty button:first-child{ border-right:1px solid #e6e6e6; }
+    .qty button:last-child{  border-left:1px solid #e6e6e6;  }
+    .qty button:focus-visible{
+      outline:2px solid #111; outline-offset:-2px;
+    }
 
-/* Input cell */
-.qty input{
-  width:100%;
-  height:100%;
-  border:0;
-  text-align:center;
-  font-weight:600;
-  font-size:16px;
-  background:#fff;
-  box-sizing:border-box;
-}
-
-/* Hide native spinners (Chrome/Edge/Safari) */
-.qty input[type="number"]::-webkit-outer-spin-button,
-.qty input[type="number"]::-webkit-inner-spin-button{
-  -webkit-appearance:none;
-  margin:0;
-}
-/* Firefox */
-.qty input[type="number"]{
-  -moz-appearance:textfield;
-  appearance:textfield;
-}
-
+    .qty input{
+      width:100%;
+      height:100%;
+      border:0;
+      text-align:center;
+      font-weight:600;
+      font-size:16px;
+      background:#fff;
+      box-sizing:border-box;
+    }
+    /* Hide native spinners */
+    .qty input[type="number"]::-webkit-outer-spin-button,
+    .qty input[type="number"]::-webkit-inner-spin-button{ -webkit-appearance:none; margin:0; }
+    .qty input[type="number"]{ -moz-appearance:textfield; appearance:textfield; }
   </style>
 </head>
 <body class="is-preload">
