--- a/luggage-bag.html
+++ b/luggage-bag.html
@@ -83,6 +83,51 @@
     .qty{ display:flex; align-items:center; border:1px solid #e6e6e6; border-radius:10px; overflow:hidden; }
     .qty button{ width:36px; height:36px; border:0; background:#fafafa; cursor:pointer; font-size:1.1rem; }
     .qty input{ width:50px; height:36px; border:0; text-align:center; font-size:1rem; }
+/* ===== Quantity stepper: split (- | input | +) ===== */
+.qty{
+  display:inline-grid;
+  grid-template-columns:44px 64px 44px;   /* btn | input | btn */
+  height:44px;
+  border:1px solid #e6e6e6;
+  border-radius:10px;
+  overflow:hidden;
+  background:#fff;
+  box-sizing:border-box;
+}
+
+/* Buttons */
+.qty button{
+  all:unset;                               /* remove UA styles */
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  cursor:pointer;
+  background:#fafafa;
+  font-size:20px;
+  font-weight:700;
+  line-height:1;
+  user-select:none;
+}
+.qty button:first-child{ border-right:1px solid #e6e6e6; }
+.qty button:last-child{  border-left:1px solid #e6e6e6;  }
+.qty button:focus-visible{ outline:2px solid #111; outline-offset:-2px; }
+
+/* Input */
+.qty input{
+  width:100%;
+  height:100%;
+  border:0;
+  text-align:center;
+  font-weight:600;
+  font-size:16px;
+  background:#fff;
+  box-sizing:border-box;
+}
+
+/* Hide native number spinners */
+.qty input[type="number"]::-webkit-outer-spin-button,
+.qty input[type="number"]::-webkit-inner-spin-button{ -webkit-appearance:none; margin:0; }
+.qty input[type="number"]{ -moz-appearance:textfield; appearance:textfield; }
 
     .note{ font-size:.9rem; color:#666; }
 
