--- a/travel-hanging-bag.html
+++ b/travel-hanging-bag.html
@@ -70,6 +70,11 @@
     .thumb[aria-selected="true"]{ border-color:#5da3d6; }
     .thumb img{ width:100%; height:100%; aspect-ratio:1/1; object-fit:cover; display:block; }
 
+    .left-info{ background:#fff; border-radius:16px; padding:18px 20px; margin-top:16px; box-shadow:0 8px 24px rgba(0,0,0,.06); }
+    .left-info h3{ margin:.25rem 0 .5rem; }
+    .left-info ul{ margin:.25rem 0 .8rem .9rem; }
+    .left-info li{ margin:.25rem 0; }
+
     .details{ background:#fff; border-radius:16px; padding:20px 22px; box-shadow:0 8px 24px rgba(0,0,0,.06); }
     .details h2{ margin:0 0 .4rem; }
     .details p{ color:#555; margin:.4rem 0 1rem; }
@@ -80,9 +85,62 @@
     .actions .button:hover{ transform:translateY(-2px); box-shadow:0 8px 22px rgba(0,0,0,.10); }
 
     .buy-row{ display:flex; align-items:center; gap:12px; margin:1rem 0 .75rem; }
-    .qty{ display:flex; align-items:center; border:1px solid #e6e6e6; border-radius:10px; overflow:hidden; }
-    .qty button{ width:36px; height:36px; border:0; background:#fafafa; cursor:pointer; font-size:1.1rem; }
-    .qty input{ width:50px; height:36px; border:0; text-align:center; font-size:1rem; }
+
+    /* ===== Quantity pill (minus | value | plus) ===== */
+    .qty{
+      display:grid;
+      grid-template-columns: 40px 56px 40px;
+      align-items:center;
+      background:#fff;
+      border:1px solid #e6e6e6;
+      border-radius:12px;
+      overflow:hidden;
+      box-shadow: inset 0 1px 0 rgba(0,0,0,.02);
+    }
+    .qty button{
+      height:40px;
+      border:0;
+      background:#f7f7f7;
+      font-size:18px; /* change to 16px for smaller +/- */
+      line-height:1;
+      color:#444;
+      cursor:pointer;
+      transition:background .15s ease, transform .05s ease;
+    }
+    #minus{
+      border-right:1px solid #eaeaea;
+      border-top-left-radius:12px;
+      border-bottom-left-radius:12px;
+    }
+    #plus{
+      border-left:1px solid #eaeaea;
+      border-top-right-radius:12px;
+      border-bottom-right-radius:12px;
+    }
+    .qty button:hover{ background:#f1f1f1; }
+    .qty button:active{ transform:translateY(1px); }
+    .qty button:focus-visible{
+      outline:2px solid #5da3d6;
+      outline-offset:2px;
+      z-index:1;
+    }
+    .qty input{
+      width:100%;
+      height:40px;
+      border:0;
+      background:#fff;
+      text-align:center;
+      font-size:16px;
+      color:#222;
+      -moz-appearance:textfield;
+    }
+    .qty input:focus{ outline:none; }
+    .qty input::-webkit-outer-spin-button,
+    .qty input::-webkit-inner-spin-button{ -webkit-appearance:none; margin:0; }
+    @media (max-width:480px){
+      .qty{ grid-template-columns: 36px 48px 36px; }
+      .qty button, .qty input{ height:36px; }
+    }
 
     .note{ font-size:.9rem; color:#666; }
 
@@ -96,7 +154,7 @@
     #header, #header *{ transform:none!important; }
     img{ aspect-ratio:auto; }
 
-    /* ===== Remove template pink hover (keep normal pink; hover turns jet-black) ===== */
+    /* Button hover (darken) */
     #addToCart.button:hover,
     #addToCart.button:focus-visible{
       background:#111 !important;
@@ -104,13 +162,10 @@
       color:#fff !important;
       box-shadow:0 10px 24px rgba(0,0,0,.18) !important;
     }
-    .details .actions .button:hover,
-    .details .actions .button:focus-visible{
-      background:#111 !important;
-      border-color:#111 !important;
-      color:#fff !important;
-      box-shadow:0 10px 24px rgba(0,0,0,.18) !important;
-    }
+
+    /* Supplier info toggle */
+    .supplier-panel{ display:none; background:#fafafa; border:1px solid #eee; border-radius:12px; padding:14px 16px; margin-top:10px; }
+    .supplier-panel p{ margin:.25rem 0; }
   </style>
 </head>
 <body class="is-preload">
@@ -156,7 +211,7 @@
         </header>
 
         <section class="product-layout reveal" aria-label="Travel Hanging Bag gallery">
-          <!-- LEFT: Main image + thumbnails -->
+          <!-- LEFT: Main image + thumbnails + Key features/specs -->
           <div>
             <div class="main-image">
               <div class="frame">
@@ -175,9 +230,32 @@
                 <img loading="lazy" src="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_240/v1760640129/Final_3_hlh6kw.png" alt="View 3 thumbnail">
               </button>
             </div>
+
+            <!-- Left info under pictures -->
+            <div class="left-info" aria-label="Key features and specifications">
+              <h3>Key features</h3>
+              <ul>
+                <li><strong>Packed example / lifestyle view</strong> available (see View 2).</li>
+                <li><strong>Open layout with hanging hook</strong> (see View 3).</li>
+                <li><strong>Smart storage</strong>: Packs small; hangs open for instant access.</li>
+                <li><strong>Spacious & durable</strong>: Multiple compartments; made to handle damp conditions.</li>
+                <li><strong>Multiple compartments</strong>: Mesh and zip pockets for visibility and organization.</li>
+              </ul>
+
+              <h3>Specifications</h3>
+              <ul>
+                <li>Material: Polyester</li>
+                <li>Size (folded): 23 × 19 × 9 cm</li>
+                <li>Package includes: 1 × toiletry bag</li>
+                <li>Weight incl. packaging: 100 g</li>
+                <li>Type: Cosmetic bag</li>
+                <li>EAN: 7314280147496</li>
+                <li>Manufacturer’s product no.: 65290448</li>
+              </ul>
+            </div>
           </div>
 
-          <!-- RIGHT: Details / CTA -->
+          <!-- RIGHT: Details / CTA (basic product info only under the button) -->
           <aside class="details" aria-live="polite">
             <h2 id="styleTitle">View 1</h2>
             <div class="meta">
@@ -200,31 +278,34 @@
                 <a href="#add" id="addToCart" class="button primary icon solid fa-check">Add to cart</a>
               </div>
             </div>
-            <p class="note">Ships in 1–3 business days. Free returns within 30 days.</p>
+
+            <!-- Shipping/returns note -->
+            <p class="note">
+              Shipping time to be confirmed. Free returns within 14 days.
+              <a href="terms.html#returns">See Return Policy</a>.
+            </p>
 
             <hr />
+
+            <!-- BASIC product info only -->
             <p><strong>Basic product information</strong></p>
             <p>The wall-mounted toiletry bag is perfect to carry in your suitcase. It packs down small and opens into a practical “wall shelf” where you can easily access all your belongings.</p>
 
-            <p><strong>Key features</strong></p>
-            <ul>
-              <li><strong>Smart storage</strong>: Packs small; hangs open for instant access.</li>
-              <li><strong>Spacious & durable</strong>: Multiple compartments; made to handle damp conditions.</li>
-              <li><strong>Multiple departments</strong>: Mesh and zip pockets for visibility and organization.</li>
-            </ul>
+            <!-- Supplier transparency -->
+            <p style="margin-top:.75rem"><em>Sourced from:</em> Finnish supplier Info.fi</p>
+            <button type="button" id="supplierBtn" class="button" aria-expanded="false" aria-controls="supplierPanel">Supplier information</button>
+            <div id="supplierPanel" class="supplier-panel" role="region" aria-label="Supplier information">
+              <p><strong>EAN code:</strong> 7314280147496</p>
+              <p><strong>Manufacturer's product number:</strong> 65290448</p>
+              <p><strong>Manufacturing information</strong> includes the address of the product manufacturer and other information about the manufacturer.</p>
+              <p><strong>INF Company AB</strong><br>
+                Lokegatan 5, 263 37 Höganäs, Sweden<br>
+                <a href="https://inf.se/" target="_blank" rel="noopener">https://inf.se/</a>
+              </p>
+            </div>
 
-            <p><strong>Specifications</strong></p>
-            <ul>
-              <li>Material: Polyester</li>
-              <li>Size (folded): 23 × 19 × 9 cm</li>
-              <li>Package includes: 1 × toiletry bag</li>
-              <li>Weight incl. packaging: 100 g</li>
-              <li>Type: Cosmetic bag</li>
-              <li>EAN: 7314280147496</li>
-              <li>Manufacturer’s product no.: 65290448</li>
-            </ul>
-
-            <details style="margin-top:.4rem">
+            <!-- Optional: Environmental & safety -->
+            <details style="margin-top:.6rem">
               <summary><strong>Environmental & safety information</strong></summary>
               <p><em>Responsible party / Manufacturer</em><br>
               INF Company AB, Lokegatan 5, 263 37 Höganäs, Sweden — <a href="https://inf.se/" target="_blank" rel="noopener">inf.se</a></p>
@@ -237,6 +318,11 @@
             </div>
           </aside>
         </section>
+
+        <!-- Disclaimer (for every product page) -->
+        <p style="margin-top:18px; font-size:.9rem; color:#666;">
+          <em>Images are illustrative. Actual product may vary slightly from the pictures. (Images are enhanced with artificial intelligence software.)</em>
+        </p>
 
       </div>
     </div>
@@ -310,7 +396,7 @@
       }, { passive: true });
     })();
 
-    // Gallery swap
+    // Gallery swap (captions for View 2 & 3 switched as requested)
     (function () {
       var main  = document.getElementById('mainImage');
       var title = document.getElementById('styleTitle');
@@ -324,8 +410,8 @@
 
       var captions = [
         'Front view with compartments.',
-        'Open layout with hanging hook.',
-        'Packed example / lifestyle view.'
+        'Packed example / lifestyle view.',
+        'Open layout with hanging hook.'
       ];
 
       var current = 1;
@@ -383,6 +469,18 @@
       add.addEventListener('click', function(e){
         e.preventDefault();
         alert('Added ' + (parseInt(qty.value,10)||1) + ' to cart. (Connect to Stripe/cart logic)');
+      });
+    })();
+
+    // Supplier info toggle (button shows/hides info)
+    (function(){
+      var btn = document.getElementById('supplierBtn');
+      var panel = document.getElementById('supplierPanel');
+      if(!btn || !panel) return;
+      btn.addEventListener('click', function(){
+        var open = panel.style.display === 'block';
+        panel.style.display = open ? 'none' : 'block';
+        btn.setAttribute('aria-expanded', String(!open));
       });
     })();
   </script>
